--- a/FE/package.json
+++ b/FE/package.json
@@ -10,11 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "apexcharts": "^3.49.1",
+    "axios": "^1.6.8",
     "flowbite-react": "^0.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.4",
     "react-router-dom": "^6.23.1",
-    "swiper": "^11.1.3"
+    "swc": "^1.0.11",
+    "swiper": "^11.1.3",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20.12.11",
